changes in price

--- a/checkout.html
+++ b/checkout.html
@@ -61,11 +61,11 @@
             <form id="payForm" class="row g-3">
               <div class="col-12">
                 <label class="form-label">Full Name</label>
-                <input required class="form-control" placeholder="Jane Doe">
+                <input required class="form-control" placeholder="Roju Ghimire">
               </div>
               <div class="col-12">
                 <label class="form-label">Email</label>
-                <input required type="email" class="form-control" placeholder="jane@example.com">
+                <input required type="email" class="form-control" placeholder="roju@example.com">
               </div>
               <div class="col-12">
                 <label class="form-label">Card Number</label>
