--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           class="navbar-toggler-icon"></span></button>
       <div id="nav" class="collapse text-bold navbar-collapse">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="vendor_gallery.html">Various Vendors</a></li>
+          <li class="nav-item"><a class="nav-link" href="vendor_gallery.html">Various Vendors Gallery</a></li>
           <li class="nav-item"><a class="nav-link" href="vendor_management.html">Be a vendor</a></li>
           <li class="nav-item"><a class="nav-link" href="checkout.html">Cart</a></li>
         </ul>
