--- a/item_details.html
+++ b/item_details.html
@@ -10,18 +10,24 @@
 </head>
 
 <body>
+  
+
   <nav class="navbar navbar-expand-lg bg-white sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html"><span class="text-primary">Virtual</span> <span
-          class="text-danger">Gallery</span></a>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav"><span
-          class="navbar-toggler-icon"></span></button>
-      <div id="nav" class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="vendor_gallery.html">Various Vendors</a></li>
+      <a class="navbar-brand fw-bold" href="index.html"><span class="text-primary">Tech</span> <span
+          class="text-danger">Hive</span></a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="vendor_gallery.html">Various Vendors Gallery</a></li>
           <li class="nav-item"><a class="nav-link" href="vendor_management.html">Be a vendor</a></li>
           <li class="nav-item"><a class="nav-link" href="checkout.html">Cart</a></li>
         </ul>
+        </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
       </div>
     </div>
   </nav>
