--- a/item_details.html
+++ b/item_details.html
@@ -125,6 +125,29 @@
         <a href="vendor_gallery.html" class="d-block mt-3">← Back to Gallery</a>
       </div>
     </section>
+    
+     <!-- Vendor 5 -->
+    <section id="item5" class="row g-4 my-5">
+      <div class="col-md-6 text-center">
+        <img src="img/hi.webp" class="img-fluid rounded" alt="Eco-Tech Picks">
+      </div>
+      <div class="col-md-6">
+        <h2>Eco-Tech Picks</h2>
+        <span class="badge bg-warning mb-2">Vendor 4</span>
+        <h4 class="text-danger mb-3">$8005.00</h4>
+        <p class="text-secondary">
+          Showcasing sustainable innovation, this collection features solar-powered gadgets, biodegradable materials,
+          and eco-conscious tech designs. Every product is crafted to reduce environmental impact while providing
+          cutting-edge functionality. From energy-efficient chargers to eco-friendly smart devices, the Eco-Tech Picks
+          encourage a greener lifestyle without compromising on quality, usability, or style. Ideal for those who want
+          to make responsible tech choices for a sustainable future.
+        </p>
+        <div class="d-flex gap-3 mt-4">
+          <a href="checkout.html" class="btn btn-primary">Add to Cart</a>
+        </div>
+        <a href="vendor_gallery.html" class="d-block mt-3">← Back to Gallery</a>
+      </div>
+    </section>
 
   </main>
 
