--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
   <!-- Nav -->
   <nav class="navbar navbar-expand-lg bg-white sticky-top">
@@ -33,8 +32,6 @@
       </div>
     </div>
   </nav>
-  
-
   <main class="container my-4">
     <!-- Hero -->
     <section class="hero p-4 p-lg-5 mb-4">
@@ -135,6 +132,22 @@
               <div class="d-flex justify-content-between align-items-center">
                 <span class="fw-semibold">$ 8005.00</span>
                 <a href="item_details.html#item4" class="btn btn-sm btn-accent">View</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Card 5 -->
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="card h-100">
+            <img src="img/eco.webp" class="card-img-top img-thumb" alt="">
+            <div class="card-body">
+              <span class="badge badge-soft mb-2">Vendor 4</span>
+              <h5 class="card-title">Eco-Tech Picks</h5>
+              <p class="card-text text-secondary small">Showcasing sustainable innovation: solar-powered gadgets,
+                biodegradable materials, and eco-conscious tech designs.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <span class="fw-semibold">$ 8005.00</span>
+                <a href="item_details.html#item5" class="btn btn-sm btn-accent">View</a>
               </div>
             </div>
           </div>
