--- a/vendor_management.html
+++ b/vendor_management.html
@@ -14,7 +14,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="vendor_gallery.html">Various Vendors Gallery</a></li>
-          <li class="nav-item"><a class="nav-link" href="vendor_management.html">Be a vendor</a></li>
+          <li class="nav-item"><a class="nav-link" href="vendor_management.html">Add Item</a></li>
           <li class="nav-item"><a class="nav-link" href="checkout.html">Cart</a></li>
         </ul>
         </li>
@@ -32,7 +32,7 @@
     <div class="row g-4">
       <div class="col-lg-5">
         <div class="card"><div class="card-body">
-          <h5 class="card-title">Upload / Edit Item</h5>
+          <h5 class="card-title">Upload Item</h5>
           <form id="itemForm" class="row g-3">
             <input type="hidden" id="editIndex">
             <div class="col-12"><label class="form-label">Title</label><input id="title" class="form-control" required placeholder="Technologies are evolving "></div>
