--- a/item_details.html
+++ b/item_details.html
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="vendor_gallery.html">Various Vendors Gallery</a></li>
-          <li class="nav-item"><a class="nav-link" href="vendor_management.html">Be a vendor</a></li>
+          <li class="nav-item"><a class="nav-link" href="vendor_management.html">Add Item</a></li>
           <li class="nav-item"><a class="nav-link" href="checkout.html">Cart</a></li>
         </ul>
         </li>
@@ -125,7 +125,7 @@
         <a href="vendor_gallery.html" class="d-block mt-3">← Back to Gallery</a>
       </div>
     </section>
-    
+
      <!-- Vendor 5 -->
     <section id="item5" class="row g-4 my-5">
       <div class="col-md-6 text-center">
