--- a/vendor_gallery.html
+++ b/vendor_gallery.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="vendor_gallery.html">Various Vendors Gallery</a></li>
-          <li class="nav-item"><a class="nav-link" href="vendor_management.html">Be a vendor</a></li>
+          <li class="nav-item"><a class="nav-link" href="vendor_management.html">Add Item</a></li>
           <li class="nav-item"><a class="nav-link" href="checkout.html">Cart</a></li>
         </ul>
         </li>
