--- a/item_details.html
+++ b/item_details.html
@@ -11,26 +11,42 @@
 
 <body>
   
+<!-- Nav -->
+<nav class="navbar navbar-expand-lg bg-black sticky-top">
+  <div class="container">
+    <!-- Brand -->
+    <a class="navbar-brand fw-bold" href="index.html">
+      <span class="text-primary">Tech</span> <span class="text-danger">Hive</span>
+    </a>
 
-  <nav class="navbar navbar-expand-lg bg-white sticky-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html"><span class="text-primary">Tech</span> <span
-          class="text-danger">Hive</span></a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="vendor_gallery.html">Various Vendors Gallery</a></li>
-          <li class="nav-item"><a class="nav-link" href="vendor_management.html">Add Item</a></li>
-          <li class="nav-item"><a class="nav-link" href="checkout.html">Cart</a></li>
-        </ul>
+    <!-- Toggler -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Collapse Menu -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="vendor_gallery.html">Various Vendors Gallery</a>
         </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="vendor_management.html">Add Item</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="checkout.html">Cart</a>
+        </li>
+      </ul>
+
+      <!-- Search Form -->
+      <form class="d-flex ms-lg-3 mt-2 mt-lg-0">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary" type="submit">Search</button>
+      </form>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <main class="container my-5">
 
