--- a/checkout.html
+++ b/checkout.html
@@ -7,6 +7,17 @@
   <title>Vendor's Gallery – Checkout</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+   <style>
+    body { background: #0f172a; }
+    .page-title { color: #e2e8f0; }
+    .subtitle { color: #94a3b8; }
+    .card { border: 0; border-radius: 1rem; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,.25); background: #0b1222; }
+    .card-img-top { height: 180px; object-fit: cover; }
+    .card-title { color: #f8fafc; }
+    .card-text { color: #cbd5e1; }
+    .badge-th { background: linear-gradient(90deg,#2563eb,#ef4444); }
+    .footer-note { color:#94a3b8; }
+  </style>
 </head>
 
 <body>
@@ -55,7 +66,7 @@
       <!-- Cart -->
       <div class="col-lg-7">
         <div class="card">
-          <div class="card-body">
+          <div class="card-body"style="background-color: #414856;">
             <h5 class="card-title">Your Cart</h5>
             <div class="table-responsive">
               <table class="table align-middle">
@@ -79,40 +90,40 @@
       <!-- Payment -->
       <div class="col-lg-5">
         <div class="card mb-3">
-          <div class="card-body">
+          <div class="card-body" style="background-color: #414856;">
             <h5 class="card-title">Payment Details</h5>
             <form id="payForm" class="row g-3">
               <div class="col-12">
-                <label class="form-label">Full Name</label>
+                <label class="form-label text-white">Full Name</label>
                 <input required class="form-control" placeholder="Roju Ghimire">
               </div>
               <div class="col-12">
-                <label class="form-label">Email</label>
+                <label class="form-label text-white">Email</label>
                 <input required type="email" class="form-control" placeholder="roju@example.com">
               </div>
               <div class="col-12">
-                <label class="form-label">Card Number</label>
+                <label class="form-label text-white">Card Number</label>
                 <input required class="form-control" placeholder="4242 4242 4242 4242">
               </div>
               <div class="col-6">
-                <label class="form-label">Expiry</label>
+                <label class="form-label text-white">Expiry</label>
                 <input required class="form-control" placeholder="MM/YY">
               </div>
               <div class="col-6">
-                <label class="form-label">CVV</label>
+                <label class="form-label text-white">CVV</label>
                 <input required class="form-control" placeholder="123">
               </div>
               <div class="col-12">
                 <div class="d-flex justify-content-between">
-                  <span class="fw-semibold">Total</span>
-                  <span class="fw-bold" id="total">$0.00</span>
+                  <span class="fw-semibold text-white">Total</span>
+                  <span class="fw-bold text-white" id="total ">$100.00</span>
                 </div>
               </div>
               <div class="col-12 d-grid">
                 <button class="btn btn-primary btn-lg" type="submit">Confirm Purchase</button>
               </div>
             </form>
-            <p class="text-secondary small mt-3 mb-0">Prototype only. No real payment processed.</p>
+            <p class="text-secondary text-white small mt-3 mb-0">Prototype only. No real payment processed.</p>
           </div>
         </div>
       </div>
