--- a/vendor_gallery.html
+++ b/vendor_gallery.html
@@ -7,6 +7,17 @@
   <title>Tech–Hive Vendor Gallery</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+   <style>
+    body { background: #0f172a; }
+    .page-title { color: #e2e8f0; }
+    .subtitle { color: #94a3b8; }
+    .card { border: 0; border-radius: 1rem; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,.25); background: #0b1222; }
+    .card-img-top { height: 180px; object-fit: cover; }
+    .card-title { color: #f8fafc; }
+    .card-text { color: #cbd5e1; }
+    .badge-th { background: linear-gradient(90deg,#2563eb,#ef4444); }
+    .footer-note { color:#94a3b8; }
+  </style>
 </head>
 
 <body>
