--- a/vendor_management.html
+++ b/vendor_management.html
@@ -5,6 +5,17 @@
   <title>Vendor's Gallery – Vendor Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+   <style>
+    body { background: #0f172a; }
+    .page-title { color: #e2e8f0; }
+    .subtitle { color: #94a3b8; }
+    .card { border: 0; border-radius: 1rem; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,.25); background: #0b1222; }
+    .card-img-top { height: 180px; object-fit: cover; }
+    .card-title { color: #f8fafc; }
+    .card-text { color: #cbd5e1; }
+    .badge-th { background: linear-gradient(90deg,#2563eb,#ef4444); }
+    .footer-note { color:#94a3b8; }
+  </style>
 </head>
 <body>
   <!-- Nav -->
@@ -51,22 +62,22 @@
   <main class="container my-4">
     <div class="row g-4">
       <div class="col-lg-5">
-        <div class="card"><div class="card-body">
+        <div class="card"><div class="card-body"style="background-color: #414856;">
           <h5 class="card-title">Upload Item</h5>
           <form id="itemForm" class="row g-3">
             <input type="hidden" id="editIndex">
-            <div class="col-12"><label class="form-label">Title</label><input id="title" class="form-control" required placeholder="Technologies are evolving "></div>
-            <div class="col-12"><label class="form-label">Vendor</label><input id="vendor" class="form-control" required placeholder=" Vendor's Name"></div>
-            <div class="col-6"><label class="form-label">Price (AUD)</label><input id="price" type="number" min="1" class="form-control" required value="50"></div>
-            <div class="col-6"><label class="form-label">Image</label><input id="image" type="file" accept="image/*" class="form-control"></div>
-            <div class="col-12"><label class="form-label">Description</label><textarea id="desc" class="form-control" rows="3" placeholder="Short description of technologies"></textarea></div>
-            <div class="col-12 d-grid"><button class="btn btn-primary" type="submit">Save Item</button></div>
+            <div class="col-12"><label class="form-label text-white">Title</label><input id="title" class="form-control" required placeholder="Technologies are evolving "></div>
+            <div class="col-12"><label class="form-label text-white">Vendor</label><input id="vendor" class="form-control" required placeholder=" Vendor's Name"></div>
+            <div class="col-6"><label class="form-label text-white">Price (AUD)</label><input id="price" type="number" min="1" class="form-control" required value="50"></div>
+            <div class="col-6"><label class="form-label text-white">Image</label><input id="image" type="file" accept="image/*" class="form-control"></div>
+            <div class="col-12"><label class="form-label text-white">Description</label><textarea id="desc" class="form-control" rows="3" placeholder="Short description of technologies"></textarea></div>
+            <div class="col-12 d-grid"><button class="btn btn-primary btn-outline-secondary text-white" type="submit">Save Item</button></div>
           </form>
         </div></div>
       </div>
 
       <div class="col-lg-7">
-        <div class="d-flex justify-content-between align-items-center mb-2">
+        <div class="d-flex justify-content-between align-items-center mb-2" >
           <h5 class="mb-0">Your Items</h5>
           <button class="btn btn-sm btn-outline-secondary" onclick="resetAll()">Reset</button>
         </div>
