--- a/checkout.html
+++ b/checkout.html
@@ -7,58 +7,87 @@
   <title>Vendor's Gallery – Checkout</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-   <style>
-    body { background: #0f172a; }
-    .page-title { color: #e2e8f0; }
-    .subtitle { color: #94a3b8; }
-    .card { border: 0; border-radius: 1rem; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,.25); background: #0b1222; }
-    .card-img-top { height: 180px; object-fit: cover; }
-    .card-title { color: #f8fafc; }
-    .card-text { color: #cbd5e1; }
-    .badge-th { background: linear-gradient(90deg,#2563eb,#ef4444); }
-    .footer-note { color:#94a3b8; }
+  <style>
+    body {
+      background: #0f172a;
+    }
+
+    .page-title {
+      color: #e2e8f0;
+    }
+
+    .subtitle {
+      color: #94a3b8;
+    }
+
+    .card {
+      border: 0;
+      border-radius: 1rem;
+      overflow: hidden;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, .25);
+      background: #0b1222;
+    }
+
+    .card-img-top {
+      height: 180px;
+      object-fit: cover;
+    }
+
+    .card-title {
+      color: #f8fafc;
+    }
+
+    .card-text {
+      color: #cbd5e1;
+    }
+
+    .badge-th {
+      background: linear-gradient(90deg, #2563eb, #ef4444);
+    }
+
+    .footer-note {
+      color: #94a3b8;
+    }
   </style>
 </head>
 
 <body>
 
- <!-- Nav -->
-<nav class="navbar navbar-expand-lg bg-black sticky-top">
-  <div class="container">
-    <!-- Brand -->
-    <a class="navbar-brand fw-bold" href="index.html">
-      <span class="text-primary">Tech</span> <span class="text-danger">Hive</span>
-    </a>
+  <nav class="navbar navbar-expand-lg bg-black sticky-top">
+    <div class="container">
+      <!-- Brand -->
+      <a class="navbar-brand fw-bold" href="index.html">
+        <span class="text-primary">Tech</span> <span class="text-danger">Hive</span>
+      </a>
 
-    <!-- Toggler -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <!-- Toggler -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <!-- Collapse Menu -->
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link text-white" href="vendor_gallery.html">Various Vendors Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="vendor_management.html">Add Item</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="checkout.html">Cart</a>
-        </li>
-      </ul>
+      <!-- Collapse Menu -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link text-white" href="vendor_gallery.html">Various Vendors Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="vendor_management.html">Add Item</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="checkout.html">Cart</a>
+          </li>
+        </ul>
 
-      <!-- Search Form -->
-      <form class="d-flex ms-lg-3 mt-2 mt-lg-0">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Search</button>
-      </form>
+        <!-- Search Form -->
+        <form class="d-flex ms-lg-3 mt-2 mt-lg-0">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-  </div>
-</nav>
-
+  </nav>
 
   <main class="container my-4">
     <h1 class="h3 mb-3">Checkout</h1>
@@ -66,7 +95,7 @@
       <!-- Cart -->
       <div class="col-lg-7">
         <div class="card">
-          <div class="card-body"style="background-color: #414856;">
+          <div class="card-body" style="background-color: #414856;">
             <h5 class="card-title">Your Cart</h5>
             <div class="table-responsive">
               <table class="table align-middle">
