--- a/vendor_management.html
+++ b/vendor_management.html
@@ -1,83 +1,121 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vendor's Gallery – Vendor Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-   <style>
-    body { background: #0f172a; }
-    .page-title { color: #e2e8f0; }
-    .subtitle { color: #94a3b8; }
-    .card { border: 0; border-radius: 1rem; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,.25); background: #0b1222; }
-    .card-img-top { height: 180px; object-fit: cover; }
-    .card-title { color: #f8fafc; }
-    .card-text { color: #cbd5e1; }
-    .badge-th { background: linear-gradient(90deg,#2563eb,#ef4444); }
-    .footer-note { color:#94a3b8; }
+  <style>
+    body {
+      background: #0f172a;
+    }
+
+    .page-title {
+      color: #e2e8f0;
+    }
+
+    .subtitle {
+      color: #94a3b8;
+    }
+
+    .card {
+      border: 0;
+      border-radius: 1rem;
+      overflow: hidden;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, .25);
+      background: #0b1222;
+    }
+
+    .card-img-top {
+      height: 180px;
+      object-fit: cover;
+    }
+
+    .card-title {
+      color: #f8fafc;
+    }
+
+    .card-text {
+      color: #cbd5e1;
+    }
+
+    .badge-th {
+      background: linear-gradient(90deg, #2563eb, #ef4444);
+    }
+
+    .footer-note {
+      color: #94a3b8;
+    }
   </style>
 </head>
+
 <body>
   <!-- Nav -->
-<!-- Nav -->
-<nav class="navbar navbar-expand-lg bg-black sticky-top">
-  <div class="container">
-    <!-- Brand -->
-    <a class="navbar-brand fw-bold" href="index.html">
-      <span class="text-primary">Tech</span> <span class="text-danger">Hive</span>
-    </a>
+  <nav class="navbar navbar-expand-lg bg-black sticky-top">
+    <div class="container">
+      <!-- Brand -->
+      <a class="navbar-brand fw-bold" href="index.html">
+        <span class="text-primary">Tech</span> <span class="text-danger">Hive</span>
+      </a>
 
-    <!-- Toggler -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <!-- Toggler -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <!-- Collapse Menu -->
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link text-white" href="vendor_gallery.html">Various Vendors Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="vendor_management.html">Add Item</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="checkout.html">Cart</a>
-        </li>
-      </ul>
+      <!-- Collapse Menu -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link text-white" href="vendor_gallery.html">Various Vendors Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="vendor_management.html">Add Item</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="checkout.html">Cart</a>
+          </li>
+        </ul>
 
-      <!-- Search Form -->
-      <form class="d-flex ms-lg-3 mt-2 mt-lg-0">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Search</button>
-      </form>
+        <!-- Search Form -->
+        <form class="d-flex ms-lg-3 mt-2 mt-lg-0">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-  </div>
-</nav>
-
-
-
+  </nav>
 
   <main class="container my-4">
     <div class="row g-4">
       <div class="col-lg-5">
-        <div class="card"><div class="card-body"style="background-color: #414856;">
-          <h5 class="card-title">Upload Item</h5>
-          <form id="itemForm" class="row g-3">
-            <input type="hidden" id="editIndex">
-            <div class="col-12"><label class="form-label text-white">Title</label><input id="title" class="form-control" required placeholder="Technologies are evolving "></div>
-            <div class="col-12"><label class="form-label text-white">Vendor</label><input id="vendor" class="form-control" required placeholder=" Vendor's Name"></div>
-            <div class="col-6"><label class="form-label text-white">Price (AUD)</label><input id="price" type="number" min="1" class="form-control" required value="50"></div>
-            <div class="col-6"><label class="form-label text-white">Image</label><input id="image" type="file" accept="image/*" class="form-control"></div>
-            <div class="col-12"><label class="form-label text-white">Description</label><textarea id="desc" class="form-control" rows="3" placeholder="Short description of technologies"></textarea></div>
-            <div class="col-12 d-grid"><button class="btn btn-primary btn-outline-secondary text-white" type="submit">Save Item</button></div>
-          </form>
-        </div></div>
+        <div class="card">
+          <div class="card-body" style="background-color: #414856;">
+            <h5 class="card-title">Upload Item</h5>
+            <form id="itemForm" class="row g-3">
+              <input type="hidden" id="editIndex">
+              <div class="col-12"><label class="form-label text-white">Title</label><input id="title"
+                  class="form-control" required placeholder="Technologies are evolving "></div>
+              <div class="col-12"><label class="form-label text-white">Vendor</label><input id="vendor"
+                  class="form-control" required placeholder=" Vendor's Name"></div>
+              <div class="col-6"><label class="form-label text-white">Price (AUD)</label><input id="price" type="number"
+                  min="1" class="form-control" required value="50"></div>
+              <div class="col-6"><label class="form-label text-white">Image</label><input id="image" type="file"
+                  accept="image/*" class="form-control"></div>
+              <div class="col-12"><label class="form-label text-white">Description</label><textarea id="desc"
+                  class="form-control" rows="3" placeholder="Short description of technologies"></textarea></div>
+              <div class="col-12 d-grid"><button class="btn btn-primary btn-outline-secondary text-white"
+                  type="submit">Save Item</button></div>
+            </form>
+          </div>
+        </div>
       </div>
 
       <div class="col-lg-7">
-        <div class="d-flex justify-content-between align-items-center mb-2" >
+        <div class="d-flex justify-content-between align-items-center mb-2">
           <h5 class="mb-0">Your Items</h5>
           <button class="btn btn-sm btn-outline-secondary" onclick="resetAll()">Reset</button>
         </div>
@@ -86,13 +124,14 @@
     </div>
   </main>
 
-<!-- Footer -->
+  <!-- Footer -->
   <footer class="py-5 mt-5">
     <div class="container">
       <div class="row gy-4">
         <div class="col-md-6">
           <h5 class="fw-bold">Tech Hive</h5>
-          <p class="mb-0">A Platform for Discovering and Buying Cutting-Edge Tech Gadgets from Independent Innovators</p>
+          <p class="mb-0">A Platform for Discovering and Buying Cutting-Edge Tech Gadgets from Independent Innovators
+          </p>
         </div>
         <div class="col-md-3">
           <h6 class="fw-semibold">Explore</h6>
@@ -114,24 +153,24 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    function load(){ return JSON.parse(localStorage.getItem('vendorItems')||'[]'); }
-    function save(data){ localStorage.setItem('vendorItems', JSON.stringify(data)); }
+    function load() { return JSON.parse(localStorage.getItem('vendorItems') || '[]'); }
+    function save(data) { localStorage.setItem('vendorItems', JSON.stringify(data)); }
 
-    function render(){
+    function render() {
       const list = load();
       const grid = document.getElementById('items');
       grid.innerHTML = '';
-      if(list.length===0){ grid.innerHTML = '<p class="text-secondary">No items yet. Add your first artwork.</p>'; return; }
-      list.forEach((it, i)=>{
+      if (list.length === 0) { grid.innerHTML = '<p class="text-secondary">No items yet. Add your first artwork.</p>'; return; }
+      list.forEach((it, i) => {
         const col = document.createElement('div');
-        col.className='col-12 col-md-6';
+        col.className = 'col-12 col-md-6';
         col.innerHTML = `
           <div class="card h-100">
-            <img src="${it.img||'img/images_used.png'}" class="card-img-top img-thumb" alt="${it.title}">
+            <img src="${it.img || 'img/images_used.png'}" class="card-img-top img-thumb" alt="${it.title}">
             <div class="card-body d-flex flex-column">
               <span class="badge badge-soft mb-2">${it.vendor}</span>
               <h6 class="fw-semibold mb-1">${it.title}</h6>
-              <p class="text-secondary small flex-grow-1">${it.desc||''}</p>
+              <p class="text-secondary small flex-grow-1">${it.desc || ''}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <span class="fw-semibold">$ ${Number(it.price).toFixed(2)}</span>
                 <div class="btn-group btn-group-sm">
@@ -145,24 +184,24 @@
       });
     }
 
-    function resetAll(){ localStorage.removeItem('vendorItems'); render(); }
-    function delItem(i){ const list = load(); list.splice(i,1); save(list); render(); }
-    function editItem(i){
+    function resetAll() { localStorage.removeItem('vendorItems'); render(); }
+    function delItem(i) { const list = load(); list.splice(i, 1); save(list); render(); }
+    function editItem(i) {
       const it = load()[i];
       document.getElementById('editIndex').value = i;
       document.getElementById('title').value = it.title;
       document.getElementById('vendor').value = it.vendor;
       document.getElementById('price').value = it.price;
-      document.getElementById('desc').value = it.desc||'';
-      window.scrollTo({top:0, behavior:'smooth'});
+      document.getElementById('desc').value = it.desc || '';
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     }
 
-    document.getElementById('itemForm').addEventListener('submit', async (e)=>{
+    document.getElementById('itemForm').addEventListener('submit', async (e) => {
       e.preventDefault();
       const list = load();
       const file = document.getElementById('image').files[0];
       let b64 = null;
-      if(file){ b64 = await fileToDataURL(file); }
+      if (file) { b64 = await fileToDataURL(file); }
       const data = {
         title: document.getElementById('title').value,
         vendor: document.getElementById('vendor').value,
@@ -171,13 +210,14 @@
         img: b64 || 'img/images_used.png'
       };
       const idx = document.getElementById('editIndex').value;
-      if(idx !== '') list[Number(idx)] = data; else list.push(data);
+      if (idx !== '') list[Number(idx)] = data; else list.push(data);
       save(list); e.target.reset(); document.getElementById('editIndex').value = '';
       render();
     });
 
-    function fileToDataURL(file){ return new Promise(res=>{ const r=new FileReader(); r.onload=()=>res(r.result); r.readAsDataURL(file); }); }
+    function fileToDataURL(file) { return new Promise(res => { const r = new FileReader(); r.onload = () => res(r.result); r.readAsDataURL(file); }); }
     render();
   </script>
 </body>
+
 </html>
