--- a/item_details.html
+++ b/item_details.html
@@ -187,18 +187,14 @@
     <!-- Vendor 5 -->
     <section id="item5" class="row g-4 my-5">
       <div class="col-md-6 text-center">
-        <img src="img/hi.webp" class="img-fluid rounded" alt="Eco-Tech Picks">
+        <img src="img/next.jpg" class="img-fluid rounded" alt="Eco-Tech Picks">
       </div>
       <div class="col-md-6">
-        <h2>Eco-Tech Picks</h2>
+        <h2>NextGen Innovators</h2>
         <span class="badge bg-warning mb-2">Vendor 4</span>
-        <h4 class="text-danger mb-3">$8005.00</h4>
+        <h4 class="text-danger mb-3">$800.00</h4>
         <p class="text-secondary">
-          Showcasing sustainable innovation, this collection features solar-powered gadgets, biodegradable materials,
-          and eco-conscious tech designs. Every product is crafted to reduce environmental impact while providing
-          cutting-edge functionality. From energy-efficient chargers to eco-friendly smart devices, the Eco-Tech Picks
-          encourage a greener lifestyle without compromising on quality, usability, or style. Ideal for those who want
-          to make responsible tech choices for a sustainable future.
+         NextGen Innovators is a forward-thinking vendor specializing in AI-driven applications and automation solutions. They help businesses streamline workflows, reduce costs, and adopt smarter decision-making systems. With expertise in artificial intelligence and process automation, NextGen empowers organizations to stay competitive in today’s fast-paced digital world.
         </p>
         <div class="d-flex gap-3 mt-4">
           <a href="checkout.html" class="btn btn-primary">Add to Cart</a>
@@ -237,8 +233,6 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
 </body>
 
 </html>
