--- a/vendor_gallery.html
+++ b/vendor_gallery.html
@@ -103,7 +103,7 @@
           <div class="card-body d-flex flex-column">
             <div class="d-flex justify-content-between mb-2">
               <span class="badge bg-primary">Vendor 1</span>
-              <span class="fw-semibold">$2000.00</span>
+              <span class="fw-semibold text-white">$2000.00</span>
             </div>
             <h5 class="card-title">Wearable Wonders</h5>
             <p class="card-text text-secondary small">Smartwatches, health rings & fashion tech.</p>
@@ -122,7 +122,7 @@
           <div class="card-body d-flex flex-column">
             <div class="d-flex justify-content-between mb-2">
               <span class="badge bg-danger">Vendor 2</span>
-              <span class="fw-semibold">$40500.00</span>
+              <span class="fw-semibold text-white">$40500.00</span>
             </div>
             <h5 class="card-title">Smart Living Hub</h5>
             <p class="card-text text-secondary small">IoT devices for a smarter, connected home.</p>
@@ -141,7 +141,7 @@
           <div class="card-body d-flex flex-column">
             <div class="d-flex justify-content-between mb-2">
               <span class="badge bg-success">Vendor 3</span>
-              <span class="fw-semibold">$6000.00</span>
+              <span class="fw-semibold text-white">$6000.00</span>
             </div>
             <h5 class="card-title">Sound & Vision</h5>
             <p class="card-text text-secondary small">Portable projectors & premium audio gear.</p>
@@ -160,7 +160,7 @@
           <div class="card-body d-flex flex-column">
             <div class="d-flex justify-content-between mb-2">
               <span class="badge bg-warning">Vendor 4</span>
-              <span class="fw-semibold">$8005.00</span>
+              <span class="fw-semibold text-white">$8005.00</span>
             </div>
             <h5 class="card-title">Eco-Tech Picks</h5>
             <p class="card-text text-secondary small">Sustainable, solar & eco-friendly gadgets.</p>
@@ -171,6 +171,26 @@
           </div>
         </div>
       </div>
+
+<!-- Vendor 5 -->
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="card h-100">
+          <img src="img/next.jpg" class="card-img-top" alt="Eco-Tech Picks">
+          <div class="card-body d-flex flex-column">
+            <div class="d-flex justify-content-between mb-2">
+              <span class="badge bg-danger">Vendor 5</span>
+              <span class="fw-semibold text-white">$850.00</span>
+            </div>
+            <h5 class="card-title">NextGen Innovators</h5>
+            <p class="card-text text-secondary small">NextGen Innovators is a forward-thinking vendor specializing in AI-driven applications and automation solutions.</p>
+            <div class="mt-auto d-flex gap-2">
+              <a href="item_details.html?id=4" class="btn btn-sm btn-primary flex-grow-1">View</a>
+              <a href="checkout.html" class="btn btn-sm btn-outline-secondary">Add</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </main>
 
