--- a/vendor_gallery.html
+++ b/vendor_gallery.html
@@ -184,7 +184,26 @@
             <h5 class="card-title">NextGen Innovators</h5>
             <p class="card-text text-secondary small">NextGen Innovators is a forward-thinking vendor specializing in AI-driven applications and automation solutions.</p>
             <div class="mt-auto d-flex gap-2">
-              <a href="item_details.html?id=4" class="btn btn-sm btn-primary flex-grow-1">View</a>
+              <a href="item_details.html?id=5" class="btn btn-sm btn-primary flex-grow-1">View</a>
+              <a href="checkout.html" class="btn btn-sm btn-outline-secondary">Add</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Vendor 6 -->
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="card h-100">
+          <img src="img/next.jpg" class="card-img-top" alt="Eco-Tech Picks">
+          <div class="card-body d-flex flex-column">
+            <div class="d-flex justify-content-between mb-2">
+              <span class="badge bg-success">Vendor 5</span>
+              <span class="fw-semibold text-white">$6550.00</span>
+            </div>
+            <h5 class="card-title">GreenTech Solutions</h5>
+            <p class="card-text text-secondary small">GreenTech Solutions is dedicated to sustainable innovation.</p>
+            <div class="mt-auto d-flex gap-2">
+              <a href="item_details.html?id=6" class="btn btn-sm btn-primary flex-grow-1">View</a>
               <a href="checkout.html" class="btn btn-sm btn-outline-secondary">Add</a>
             </div>
           </div>
